--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ header{
     background-size: cover;
     height:100vh;
 }
+header nav{
+    font-size:larger;
+}
 
 #htitle{
     color: white;
@@ -11,6 +14,9 @@ header{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    font-family: Montserrat;
+    font-size: 2rem;
+    
 }
 .maintext{
     text-align: center;
@@ -20,4 +26,36 @@ header{
 }
 .padded-card{
     padding: 20%;
+}
+
+.social-icons {
+    font-size: 36px;
+    cursor: pointer;
+}
+.fa-facebook:hover,.fa-instagram:hover,.fa-twitter:hover,.fa-linkedin:hover, .fa-twitch:hover {
+    color: #008000;
+}
+.fab {
+    color: #000000;
+}
+#footer {
+    background-color: #808080;
+    text-align: center;
+}
+
+.navbarDark {
+    background-color: black;
+}
+
+/* .set{
+    height: 100vh;
+    width: 100vw;
+} */
+.headings{
+    font-family: montserrat;
+    font-size: 3rem;
+}
+body{
+    font-family: ubuntu;
+    font-size: large;
 }
